--- a/style.css
+++ b/style.css
@@ -1,13 +1,9 @@
+body{    
+  height: 100%;
+}
 .test-color{
-    color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-@media only screen and (max-width: 568px){
-    .test-color{
-        color: blue;
-    }
-}
-@media only screen and (max-width: 768px) and (min-width:569px){
-    .test-color{
-        color: rgb(231, 60, 165);
-    }
-}
+
